fixed overflow problem

--- a/src/styles/hero.sass
+++ b/src/styles/hero.sass
@@ -5,6 +5,8 @@
     height: 100vh
     width: 100vw
     position: relative
+    overflow: hidden
+
 
 .logo
     display: block
