--- a/src/styles/nav.sass
+++ b/src/styles/nav.sass
@@ -19,7 +19,7 @@ nav
     background-color: $dark-tone
     height: 4em
     transition: all 1s ease-out
-
+    
 .navLink
     color: white
     padding: 0 2em 0
@@ -31,8 +31,8 @@ nav
 
 .hamburger
     position: fixed
-    top: 2%
-    right: 4%
+    top: 0.6em
+    right: 1em
 
 #navIcon
     width: 3em
